Fix padding on small mobile

--- a/src/styles/scss/_exchange.scss
+++ b/src/styles/scss/_exchange.scss
@@ -1,4 +1,5 @@
 .exchange {
+    padding: 0 20px;
     $padding-top: 100px;
     min-height: calc(100vh - 100px - #{$padding-top});
 
